# conecte_4

./: .gitignore  CMakeLists.txt  board.cpp  board.hpp  input.hpp  main.cpp
include/: board.hpp  input.hpp
src/: board.cpp  main.cpp
